[package]
name = "warp_template"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3.7"
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
log4rs = "1.3.0"
md5 = "0.7.0"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "mysql", "chrono", "json", "decimal"] }
serde_path_to_error = "0.1"
chrono = "0.4"
